tests for domain module